# Snake

./: CMakeLists.txt  README.md
src/: main.c  switch.c  switch.h
